feat: added request to add specific tiles to queue
